Fixed the blur bleed

--- a/admin/login_logout/logstyle.css
+++ b/admin/login_logout/logstyle.css
@@ -12,23 +12,19 @@ body, html {
 
 .bg-image {
     background-image: url(../../asset/img/library_book_shelves.jpg);
-
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-
-    height: 100%; 
-
-    background-position: center;
-    background-repeat: no-repeat;
+    position: fixed;
+    height: 100%;
+    width: 100%;
     background-size: cover;
+    filter: blur(9px);
+    transform: scale(1.1);
 }
 
 .bg-text {
-    background-color: rgb(0,0,0); 
     background-color: rgba(0, 0, 0, 0.596);
     color: white;
     font-weight: bold;
-    border: 3px solid #f1f1f1;
+    border: 2px solid #ffffffad;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -37,7 +33,7 @@ body, html {
     width: 30%;
     padding: 100px;
     text-align: center;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 
